Fix hiveserver outofmemory issue